<resources>
    <string name="app_name">TestNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_book">Books Documents</string>
    <string name="menu_authors">Authors</string>
    <string name="menu_series">series</string>
    <string name="menu_format">Format</string>
    <string name="menu_folder">Folder</string>
    <string name="menu_download">Download</string>
    <string name="menu_trash">Trash</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_send_feedback">Send Feedback</string>

</resources>